corrected overlapping styles

--- a/css/search.css
+++ b/css/search.css
@@ -1,3 +1,35 @@
+
+/* navbar */
+.search-box {
+    display: block;
+    margin: 60px auto 20px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    text-transform: captalize;
+  }
+   
+  
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 10px;
+  }
+  
+  .nav-star svg {
+    width: 30px;
+    height: 30px;
+    fill: #333;
+    cursor:pointer;
+  }
+  
+  
+
 .search-container{
     width: 100%;
     height: 60px;
@@ -5,8 +37,12 @@
     padding: 10px 40px 60px 40px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
 }
+
+
+
 
 .search-input{
     width: 95%;
@@ -15,13 +51,26 @@
     border:none;
     outline: none;
     padding: 28px;
-    text-transform: captialize;
+    margin-top:45px;
+    margin-right: 10px;
+    font-size: 16px;
 }
 
-.search{
-    background: none;
-    border:none;
-    color: #fff;
+
+.search-btn {
+    margin-top:45px;
+    padding: 15px 15px;
+    border-radius: 5px;
     text-transform: capitalize;
+    border: none;
+    outline: none;
     cursor: pointer;
-}
+    background: #0a1113;
+    color: white;
+    
+  }
+  
+  .search-btn:hover {
+    background-color: var(--violet);
+  
+  }
