--- a/css/style.css
+++ b/css/style.css
@@ -172,54 +172,9 @@
   text-transform: captalize;
 }
 
-/* input */
 
 
-
-/* navbar
- */
- .search-box {
-  display: block;
-  margin: 60px auto 20px;
-  width: 100%;
-  height: 40px;
-  border-radius: 5px;
-  padding: 10px;
-  border: none;
-  outline: none;
-  text-transform: captalize;
-}
- 
-
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f5f5f5;
-  padding: 10px;
-}
-
-.nav-star svg {
-  width: 30px;
-  height: 30px;
-  fill: #333;
-  cursor:pointer;
-}
-
-
-.search-container {
-  display: flex;
-  align-items: center;
-}
-
-.search-input {
-  margin-top:45px;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 3px;
-  margin-right: 10px;
-  font-size: 16px;
-}
+/* search */
 
 
 .search-btn {
